feat: implement quiz taking and scoring flow